syntax = "proto3";

package classService.v1;

//import "google/protobuf/any.proto";

option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/classService/v1;classServicev1";
// The greeting service definition.
service ClassService {
  // 数据源是所有使用匣子的用户的课表，从其中搜索相应的课程
  rpc SearchClass (SearchRequest) returns (SearchReply) ;
  //添加课程
  rpc AddClass (AddClassRequest) returns (AddClassReply) ;
}

message SearchRequest {
  //搜索关键词,匹配的是课程名称和教师姓名
  string searchKeyWords = 1;
  string year = 2 ;
  string semester = 3 ;
}

message SearchReply {
  //课程信息
  repeated ClassInfo class_infos = 1 ;
}
message AddClassRequest {
  //学号
  string stu_id=1 ;
  //课程名称
  string name=2 ;
  //第几节 '形如 "1-3","1-1"'
  string dur_class=3 ;
  //地点
  string where=4;
  //教师
  string teacher=5 ;
  //哪些周
  int64  weeks=6 ;
  // 学期
  string semester=7;
  //学年
  string year=8 ;
  //星期几
  int64 day=9 ;
  //学分
  optional double credit=10;
}
message AddClassReply {
  //添加的课程ID
  string id=1 ;
  string msg=2 ;
}

message  ClassInfo {
  //星期几
  int64 day=1 ;
  //任课教师
  string teacher=2 ;
  //上课地点
  string where=3;
  //上课是第几节（如1-2,3,4）
  string class_when=4 ;
  //上课的周数(文字描述,如1-9周)
  string week_duration=5 ;
  //课程名称
  string classname=6 ;
  //学分
  double credit=7;
  //哪些周 这个是一个64位的数字,如果有第一周,那么该数的二进制从右往左的第一位为1,以此类推
  //比如该数的二进制是000000101,就代表第一周和第三周有课.
  int64 weeks=8;
  //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
  string semester=9 ;
  //学年  "2024" 代表"2024-2025学年"
  string year=10;
  //课程唯一标识id
  string id=11;
}
