syntax = "proto3";
package kratos.api;

option go_package = "be-library/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;
  ZapLogConfigs zaplog = 4;
}

message Server {
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  GRPC grpc = 1;
  string name = 2;
}

message Data {
  message Database {
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
    string password = 5;
  }
  Database database = 1;
  Redis redis = 2;
}

message ZapLogConfigs {
  string log_level = 1;          // 日志打印级别 debug, info, warning, error
  string log_format = 2;         // 输出日志格式 logfmt, json
  string log_path = 3;           // 输出日志文件路径
  string log_file_name = 4;      // 输出日志文件名称
  int32 log_file_max_size = 5;   // 【日志分割】单个日志文件最多存储量 单位(mb)
  int32 log_file_max_backups = 6;// 【日志分割】日志备份文件最多数量
  int32 log_max_age = 7;         // 日志保留时间，单位: 天 (day)
  bool log_compress = 8;         // 是否压缩日志
  bool log_stdout = 9;           // 是否输出到控制台
}

message Registry {
  Etcd etcd = 1;
  string usersvc = 2;
}

message Etcd {
  string addr = 1;
  string username = 2;
  string password = 3;
}